# qemu

./: MAINTAINERS  Makefile  configure  meson.build  monitor.c  qapi-schema.json  qemu-eglview.c  qemu-options.hx  qmp-commands.hx  trace-events  vl.c
.gitlab-ci.d/: qemu-project.yml
accel/qtest/: qtest.c
accel/tcg/: tcg-accel-ops.c  tcg-all.c
audio/: alsaaudio.c  audio.c  audio_template.h  ossaudio.c  paaudio.c  wavaudio.c
backends/: wctablet.c
default-configs/: x86_64-softmmu.mak
docs/devel/: index-internals.rst
hw/: Kconfig  Makefile.objs  meson.build
hw/9pfs/: meson.build  virtio-9p-device.c
hw/acpi/: core.c
hw/arm/: musicpal.c  sbsa-ref.c  virt.c
hw/char/: serial-isa.c  (+2 more)
hw/uefi/: hardware-info.c  meson.build  var-service-auth.c  var-service-core.c  var-service-guid.c  var-service-isa.c  var-service-json.c  var-service-pcap.c  var-service-pkcs7-stub.c  var-service-pkcs7.c  var-service-policy.c  var-service-siglist.c  var-service-sysbus.c  var-service-utils.c  var-service-vars.c
monitor/: misc.c
pc-bios/: efi-e1000.rom  efi-eepro100.rom  efi-ne2k_pci.rom  efi-pcnet.rom  efi-rtl8139.rom  efi-virtio.rom
qapi/: audio.json  meson.build  qapi-schema.json  qom.json  uefi.json
qobject/: qstring.c
roms/: Makefile  config.ipxe.branding.h  config.ipxe.general.h
scripts/: copy-dlls  update-linux-headers.sh
tests/: Makefile  requirements.txt
ui/: Makefile.objs  cocoa.m  console-gl.c  egl-helpers.c  egl.c  fbdev.c  gtk.c  input.c  qemu-pixman.c  sdl.c  sdl2.c  sdl2_scancode_translate.h  vnc.c  vnc.h
util/: module.c  qemu-config.c  trace-events
(+95 files in other folders)
